fixed layout shift

--- a/src/app/shared/components/pin-input/pin-input.component.scss
+++ b/src/app/shared/components/pin-input/pin-input.component.scss
@@ -4,7 +4,6 @@
   align-items: center;
   gap: 20px;
   padding: 20px;
-  max-width: 500px;
   margin: 0 auto;
   background-color: var(--ion-item-background);
   margin: 0 5px;
